fixed some issues on mobile

--- a/pitches/style.css
+++ b/pitches/style.css
@@ -208,6 +208,8 @@ textarea[class='inputText'] {
     height: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .progress {
